# FTZ

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  zephyr.diff
fuzzer/: .gitattributes  .gitignore  Cargo.toml  Makefile.toml  monitor.json  pcap.pcap  pcap_trace.pcap
fuzzer/benches/: parse_eth.rs
fuzzer/log/: Naïve havoc_mutations Run.toml  Naïve havoc_mutations naïve state feedback.toml  capture.pcap  inmemory.json  long.toml  monitor-non-diff.json  non-memory-leak.json  pcap_trace.pcap  state-mark.toml  tcp-mutations.toml
fuzzer/log/consistency/pcaps/14416100157073915100/: 217921659132825285, Ok with count 4.json  217921659132825285, Ok with count 4.pcap  5081614073079559770, Ok with count 4.json  5081614073079559770, Ok with count 4.pcap  7429754576197461243, Ok with count 2.json  7429754576197461243, Ok with count 2.pcap
fuzzer/log/consistency/pcaps/15496310526186460254/: 13641583053934245825, Ok with count 5.json  13641583053934245825, Ok with count 5.pcap  18152510950591570588, Ok with count 2.json  18152510950591570588, Ok with count 2.pcap  3296701863116453802, Ok with count 3.json  3296701863116453802, Ok with count 3.pcap
fuzzer/log/consistency/pcaps/407328010505884743/: 13135422027546294635, Ok with count 1.json  13135422027546294635, Ok with count 1.pcap  2058443513743651810, Ok with count 4.json  2058443513743651810, Ok with count 4.pcap  8945887139560451626, Ok with count 5.json  8945887139560451626, Ok with count 5.pcap
fuzzer/log/coverage-stability/: coverage-monitor.json  stability-output.txt
fuzzer/scripts/: data_extractor.py  extract-pcaps-from-json.py  inter-observer-consistency.py  parse-consistency-ratios copy.py  parse-consistency-ratios.py  plots-json.py  plots.py  postprocess-packets.py  process_duplicate.py  process_metadata.py  process_stability.py  ratio_plotter.py  single-plots.py  system-load.py
fuzzer/scripts/consistency/: __init__.py  distribution_plotter.py  parse-consistency-ratios.py  plotter.py  ratio_plotter.py
fuzzer/src/: cli.rs  direction.rs  executor.rs  fuzzer.rs  lib.rs  main.rs  packets.rs  pcap.rs  shmem.rs
fuzzer/src/layers/: data_link.rs  interactive.rs  mod.rs  network.rs  upper.rs
fuzzer/src/runner/: calibration_log_stage.rs  client.rs  corpus.rs  executor.rs  fuzzer.rs  generator.rs  input.rs  metadata.rs  mod.rs  objective.rs  spawn.rs  thread.rs  zephyr.rs
fuzzer/src/runner/feedback/: corpus_dir_count.rs  cov_log.rs  input_len.rs  memory.rs  mod.rs  sparse.rs
fuzzer/src/runner/generator/: fixed.rs  mod.rs  random.rs
fuzzer/src/runner/input/: appending.rs  bool.rs  etherparse.rs  generator.rs  list.rs  mod.rs  parsed.rs  stateful.rs
fuzzer/src/runner/observer/: mod.rs  packet.rs  state.rs
fuzzer/src/smoltcp/: mod.rs  shmem_net_device.rs  shmem_net_device_buffers.rs  smoltcp_shmem_net_device.rs
presentation/: Presentation CYD.key  Presentation InIT.key
report/: .gitignore  build-svgs.sh  build.sh  epfl.md  (+2 more)
(+4 files in other folders)
