[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"
authors = ["Valentin Huber <contact@valentinhuber.me>"]
license = "MIT"

[profile.release]
# lto = true
# codegen-units = 1
# opt-level = 3
debug = true

[dependencies]
pnet = { version = "0.35.0", features = ["serde"] }
libafl = { path = "../LibAFL/libafl", features = ["multipart_inputs"] }
libafl_bolts = { path = "../LibAFL/libafl_bolts" }
wait-timeout = "0.2.0"
pcap = "2.2.0"
pcap-file = "2.0.0"
smoltcp = { version = "0.11.0", features = ["log", "iface-max-addr-count-3"] }
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
ahash = "0.8.11"
base64 = "0.22.1"
hex = "0.4.3"
serde_json = "1.0.133"
etherparse = { path = "../etherparse/etherparse", features = ["serde"] }
sys-info = "0.9.1"

[features]
default = ["monitor_none", "multipart_input", "monitor_memory"]
monitor_tui = ["libafl/tui_monitor"]
monitor_stdout = []
monitor_none = []
stability = []
hashes = ["stability"]
multipart_input = []
monitor_memory = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse_eth"
harness = false
